final version with correct .jar file names